// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapEventCard snapshots renders free event without image (placeholder) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "bottom": 25.5,
      "elevation": 4,
      "flexDirection": "row",
      "left": 21,
      "opacity": 1,
      "padding": 8.5,
      "position": "absolute",
      "right": 21,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "height": 120,
        "overflow": "hidden",
        "width": 100,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          {
            "backgroundColor": "#E5E7EB",
          },
        ]
      }
    >
      <Text
        color="#9CA3AF"
        name="calendar-outline"
        size={28}
      >
        calendar-outline
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 8.5,
        "paddingVertical": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "marginBottom": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 3,
          },
          {
            "backgroundColor": "#4F46E518",
          },
        ]
      }
    >
      <View
        data-icon="Technologie"
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 10,
              "textTransform": "capitalize",
            },
            {
              "color": "#4F46E5",
            },
          ]
        }
      >
        Technologie
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 11,
            "letterSpacing": 1,
            "marginBottom": 4,
            "textTransform": "uppercase",
          },
          {
            "color": "#FF6B6B",
          },
        ]
      }
    >
      15 JUIN
    </Text>
    <Text
      numberOfLines={2}
      style={
        [
          {
            "fontFamily": "FunnelDisplay_700Bold",
            "fontSize": 15,
            "letterSpacing": -0.2,
            "lineHeight": 19,
            "marginBottom": 4,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Forum Tech 2026
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 4,
        }
      }
    >
      <Text
        color="#374151"
        name="location-outline"
        size={12}
      >
        location-outline
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "flex": 1,
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 11,
            },
            {
              "color": "#374151",
            },
          ]
        }
      >
        Douala
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 14,
          },
          {
            "color": "#10B981",
          },
        ]
      }
    >
      Gratuit
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
      ]
    }
  >
    <Text
      color="#4F46E5"
      name="chevron-forward"
      size={18}
    >
      chevron-forward
    </Text>
  </View>
</View>
`;

exports[`MapEventCard snapshots renders paid event with image 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "bottom": 25.5,
      "elevation": 4,
      "flexDirection": "row",
      "left": 21,
      "opacity": 1,
      "padding": 8.5,
      "position": "absolute",
      "right": 21,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "height": 120,
        "overflow": "hidden",
        "width": 100,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "transparent",
            "overflow": "hidden",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <Image
        accessibilityElementsHidden={true}
        blurRadius={25}
        cachePolicy="memory-disk"
        contentFit="cover"
        importantForAccessibility="no"
        source={
          {
            "uri": "https://test.local/media/events/forum.jpg",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Image
        cachePolicy="memory-disk"
        contentFit="contain"
        source={
          {
            "uri": "https://test.local/media/events/forum.jpg",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transition={200}
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 8.5,
        "paddingVertical": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "marginBottom": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 3,
          },
          {
            "backgroundColor": "#4F46E518",
          },
        ]
      }
    >
      <View
        data-icon="Technologie"
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 10,
              "textTransform": "capitalize",
            },
            {
              "color": "#4F46E5",
            },
          ]
        }
      >
        Technologie
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 11,
            "letterSpacing": 1,
            "marginBottom": 4,
            "textTransform": "uppercase",
          },
          {
            "color": "#FF6B6B",
          },
        ]
      }
    >
      15 JUIN
    </Text>
    <Text
      numberOfLines={2}
      style={
        [
          {
            "fontFamily": "FunnelDisplay_700Bold",
            "fontSize": 15,
            "letterSpacing": -0.2,
            "lineHeight": 19,
            "marginBottom": 4,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Forum Tech 2026
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 4,
        }
      }
    >
      <Text
        color="#374151"
        name="location-outline"
        size={12}
      >
        location-outline
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "flex": 1,
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 11,
            },
            {
              "color": "#374151",
            },
          ]
        }
      >
        Douala
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 14,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      5 000 FCFA
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
      ]
    }
  >
    <Text
      color="#4F46E5"
      name="chevron-forward"
      size={18}
    >
      chevron-forward
    </Text>
  </View>
</View>
`;

exports[`MapEventCard snapshots renders with userLocation + distance 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "bottom": 25.5,
      "elevation": 4,
      "flexDirection": "row",
      "left": 21,
      "opacity": 1,
      "padding": 8.5,
      "position": "absolute",
      "right": 21,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "height": 120,
        "overflow": "hidden",
        "width": 100,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "transparent",
            "overflow": "hidden",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <Image
        accessibilityElementsHidden={true}
        blurRadius={25}
        cachePolicy="memory-disk"
        contentFit="cover"
        importantForAccessibility="no"
        source={
          {
            "uri": "https://test.local/media/events/forum.jpg",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Image
        cachePolicy="memory-disk"
        contentFit="contain"
        source={
          {
            "uri": "https://test.local/media/events/forum.jpg",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transition={200}
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 8.5,
        "paddingVertical": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "marginBottom": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 3,
          },
          {
            "backgroundColor": "#4F46E518",
          },
        ]
      }
    >
      <View
        data-icon="Technologie"
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 10,
              "textTransform": "capitalize",
            },
            {
              "color": "#4F46E5",
            },
          ]
        }
      >
        Technologie
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 11,
            "letterSpacing": 1,
            "marginBottom": 4,
            "textTransform": "uppercase",
          },
          {
            "color": "#FF6B6B",
          },
        ]
      }
    >
      15 JUIN
    </Text>
    <Text
      numberOfLines={2}
      style={
        [
          {
            "fontFamily": "FunnelDisplay_700Bold",
            "fontSize": 15,
            "letterSpacing": -0.2,
            "lineHeight": 19,
            "marginBottom": 4,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Forum Tech 2026
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 4,
        }
      }
    >
      <Text
        color="#374151"
        name="location-outline"
        size={12}
      >
        location-outline
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "flex": 1,
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 11,
            },
            {
              "color": "#374151",
            },
          ]
        }
      >
        Douala
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 11,
            },
            {
              "color": "#4F46E5",
            },
          ]
        }
      >
        5
         km
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 14,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      5 000 FCFA
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
      ]
    }
  >
    <Text
      color="#4F46E5"
      name="chevron-forward"
      size={18}
    >
      chevron-forward
    </Text>
  </View>
</View>
`;

exports[`MapEventCard snapshots renders without category 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "bottom": 25.5,
      "elevation": 4,
      "flexDirection": "row",
      "left": 21,
      "opacity": 1,
      "padding": 8.5,
      "position": "absolute",
      "right": 21,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "height": 120,
        "overflow": "hidden",
        "width": 100,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "transparent",
            "overflow": "hidden",
          },
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <Image
        accessibilityElementsHidden={true}
        blurRadius={25}
        cachePolicy="memory-disk"
        contentFit="cover"
        importantForAccessibility="no"
        source={
          {
            "uri": "https://test.local/media/events/forum.jpg",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <Image
        cachePolicy="memory-disk"
        contentFit="contain"
        source={
          {
            "uri": "https://test.local/media/events/forum.jpg",
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transition={200}
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 8.5,
        "paddingVertical": 4,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 11,
            "letterSpacing": 1,
            "marginBottom": 4,
            "textTransform": "uppercase",
          },
          {
            "color": "#FF6B6B",
          },
        ]
      }
    >
      15 JUIN
    </Text>
    <Text
      numberOfLines={2}
      style={
        [
          {
            "fontFamily": "FunnelDisplay_700Bold",
            "fontSize": 15,
            "letterSpacing": -0.2,
            "lineHeight": 19,
            "marginBottom": 4,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Forum Tech 2026
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginBottom": 4,
        }
      }
    >
      <Text
        color="#374151"
        name="location-outline"
        size={12}
      >
        location-outline
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "flex": 1,
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 11,
            },
            {
              "color": "#374151",
            },
          ]
        }
      >
        Douala
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 14,
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      5 000 FCFA
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
      ]
    }
  >
    <Text
      color="#4F46E5"
      name="chevron-forward"
      size={18}
    >
      chevron-forward
    </Text>
  </View>
</View>
`;
